<resources>
    <string name="app_name">BookBarn</string>
    <string name="www_barnbooks_com">www.barnbooks.com</string>
    <string name="username">User Name</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password</string>
    <string name="sign_up">sign up</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="logo">logo</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="book_cover">Book cover</string>
    <string name="yakuza_moon">YaKUZA Moon</string>
    <string name="home">home</string>
    <string name="favorite">favorite</string>
    <string name="mylibrary">mylibrary</string>
    <string name="setting">setting</string>
    <string name="profile">profile</string>
    <string name="cover">Cover</string>
    <string name="title_place_holder">Title Place Holder</string>
    <string name="author_place_holder">Author Place Holder</string>
    <string name="explore_categories">EXPLORE CATEGORIES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="library">Library</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="author">Author</string>

</resources>