<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/BookBarnLogo"
        android:layout_width="181dp"
        android:layout_height="124dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/EnterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="15dp"
        android:autofillHints="Email"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/BookBarnLogo"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="@+id/BookBarnLogo"
        app:layout_constraintTop_toBottomOf="@+id/BookBarnLogo" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:autofillHints="User Name"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/EnterEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/EnterEmail"
        app:layout_constraintTop_toBottomOf="@+id/EnterEmail"
        app:layout_constraintVertical_bias="0.029" />

    <EditText
        android:id="@+id/EnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/UserName"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Confirm Password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/EnterPassword"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword"
        app:layout_constraintVertical_bias="0.009"/>

    <TextView
        android:id="@+id/OR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:layout_weight="60"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp"
        app:layout_constraintVertical_bias="0.403" />

    <Button
        android:id="@+id/Google"
        android:layout_width="366dp"
        android:layout_height="47dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/SignUp"
        app:layout_constraintStart_toStartOf="@+id/SignUp"
        app:layout_constraintTop_toBottomOf="@id/OR"
        app:layout_constraintVertical_bias="0.214" />
</androidx.constraintlayout.widget.ConstraintLayout>