<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/BookBarnLogo"
        android:layout_width="193dp"
        android:layout_height="114dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/BookBarnLogo"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/BookBarnLogo"
        app:layout_constraintTop_toBottomOf="@+id/BookBarnLogo"
        app:layout_constraintVertical_bias="0.101"
        android:autofillHints="Username"/>

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/UserName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/UserName"
        app:layout_constraintTop_toBottomOf="@+id/UserName"
        app:layout_constraintVertical_bias="0.036"
        android:autofillHints="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Password"
        app:layout_constraintVertical_bias="0.075"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="412dp"
        android:layout_height="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/Login"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/Login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561">

        <TextView
            android:id="@+id/ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/OR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="60"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Login"
        app:layout_constraintStart_toStartOf="@+id/Login"
        app:layout_constraintTop_toTopOf="@id/Login"
        app:layout_constraintVertical_bias="0.403" />

    <Button
        android:id="@+id/Google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Login"
        app:layout_constraintTop_toBottomOf="@id/OR"
        app:layout_constraintVertical_bias="0.214" />
</androidx.constraintlayout.widget.ConstraintLayout>