<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".BookDetailActivity">


    <ImageView
        android:id="@+id/Cover"
        android:layout_width="269dp"
        android:layout_height="402dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cover"
        android:src="@drawable/moagd" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/title_place_holder"
        android:gravity="center"
        android:lines="2"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/white"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/Author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/author_place_holder"
        android:gravity="center"
        android:lines="2"
        android:textSize="15sp"
        android:background="@color/white"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/author_place_holder"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@color/white"
        android:textColor="@color/black"/>





</LinearLayout>